--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,70 +1,346 @@
+/* GENERAL */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: white;
 }
 
 main {
   height: 100vh;
+  background: #182142;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 section {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 2vw;
   position: relative;
+  padding: 1vw;
 }
 
 h1 {
-  margin-bottom: 30px;
+  font-size: 5vw;
 }
 
 h2 {
-  margin-bottom: 30px;
+  font-size: 2.5vw;
+  text-align: center;
 }
 
 h3 {
-  margin-bottom: 30px;
+  font-size: 2vw;
+}
+
+img {
+  max-width: 100%;
 }
 
 article {
-  margin-bottom: 30px;
+  border-radius: 10px;
 }
 
+/* ROUNDS */
 .rounds {
-  border: 1px solid black;
-  padding: 30px;
-}
-
-.pick-rounds {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-}
-
-.win-lose {
+  padding: 10px;
   display: flex;
   justify-content: space-between;
-  border: 1px solid black;
-  padding: 30px;
+  gap: 5vw;
+  text-align: center;
 }
 
-.action {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+.rounds h2 {
+  margin-bottom: 2vw;
 }
 
-.restart {
+form {
+  border: 3px solid white;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+/* PICKED ROUNDS */
+.picked-rounds p {
+  text-align: center;
+  font-size: 2.5vw;
+}
+
+.picked-rounds {
+  width: 30vw;
+  height: 10vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2vw;
+  padding: 0 2vw;
+  position: relative;
+}
+
+.picked-rounds p:nth-of-type(1) {
   position: absolute;
   bottom: 0;
 }
 
+input {
+  width: 2vw;
+}
+
+label {
+  font-size: 2.5vw;
+}
+
+/* STATS */
+.stats {
+  text-align: center;
+  border: 3px solid white;
+  padding: 10px;
+  overflow: scroll;
+  width: 30vw;
+  height: 20vw;
+  position: relative;
+}
+
+.stats h2 {
+  margin-bottom: 0;
+}
+
+.stats div {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.stats div h3 {
+  font-size: 2.5vw;
+  margin-bottom: 1vw;
+  position: sticky;
+}
+
+.stats div h3:nth-of-type(1) {
+  color: red;
+}
+
+.stats div h3:nth-of-type(3) {
+  color: blue;
+}
+
+.stats img {
+  height: 3vw;
+  display: block;
+  margin: auto;
+  margin-bottom: 1vw;
+}
+
+.stats p {
+  font-size: 2vw;
+  height: 3vw;
+  margin-bottom: 1vw;
+}
+
+/* WIN-LOSE */
+.win-lose {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2vw;
+  position: relative;
+}
+
+.win-lose h2 {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 4vw;
+  color: white;
+}
+
+.win-lose h2:nth-of-type(1) {
+  position: absolute;
+  left: 0;
+  background: red;
+}
+
+.win-lose h2:nth-of-type(2) {
+  position: absolute;
+  right: 0;
+  background: blue;
+}
+
+.vs {
+  font-size: 3.5vw;
+  font-weight: 700;
+}
+
 .user-stat,
 .comp-stat {
-  font-size: 50px;
+  font-size: 7vw;
+}
+
+.endresult {
+  font-size: 3vw;
+}
+
+/* ACTION */
+.action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10vw;
+}
+
+.action button {
+  background: #182142;
+  border: 3px solid white;
+  border-radius: 10px;
+  width: 10%;
+  transition: 0.5s linear;
+}
+
+.Rock {
+  background: rgb(143, 234, 143);
+  border-radius: 10px;
+}
+
+.Paper {
+  background: rgb(255, 118, 118);
+  border-radius: 10px;
+}
+
+.Scissors {
+  background: rgb(255, 255, 123);
+  border-radius: 10px;
+}
+
+.action button:active {
+  transform: scale(1.2);
+}
+
+.restart {
+  background: #182142;
+  position: absolute;
+  bottom: 0;
+  left: 44%;
+  width: 15%;
+  height: 5%;
+  border: 1px solid white;
+  border-radius: 10px;
+  font-size: 2vw;
+}
+
+h3:nth-last-of-type(1) {
+  margin-bottom: 4vw;
+}
+
+.animation-you {
+  position: absolute;
+  left: -100%;
+  width: 50vw;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.animation-you-after {
+  left: 0;
+  animation: animationforyou 1.5s linear alternate;
+}
+
+.animation-comp {
+  position: absolute;
+  right: -100%;
+  width: 50vw;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.animation-comp-after {
+  right: 0;
+  animation: animationforcomp 1.5s linear alternate;
+}
+
+.animation-you img {
+  width: 70%;
+  padding: 30px;
+  background: red;
+  border-radius: 100%;
+}
+
+.animation-comp img {
+  width: 70%;
+  padding: 30px;
+  background: blue;
+  border-radius: 100%;
+}
+
+.clash {
+  display: none;
+  position: absolute;
+}
+
+.clash h2 {
+  font-size: 10vw;
+}
+
+.clash-after {
+  display: block;
+  animation: clash 1s linear;
+}
+
+.animation-vs h2 {
+  font-size: 10vw;
+}
+
+@keyframes animationforyou {
+  0% {
+    left: -100%;
+  }
+  25% {
+    left: 0;
+  }
+  50% {
+    left: 0;
+  }
+  75% {
+    left: 0;
+  }
+  100% {
+    display: none;
+    left: -100%;
+  }
+}
+
+@keyframes animationforcomp {
+  0% {
+    right: -100%;
+  }
+  25% {
+    right: 0;
+  }
+  50% {
+    right: 0;
+  }
+  75% {
+    right: 0;
+  }
+  100% {
+    display: none;
+    right: -100%;
+  }
+}
+
+@keyframes clash {
+  0% {
+    transform: translateY(-20px);
+  }
+
+  50% {
+    transform: translateY(20px);
+  }
 }
