--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,32 +11,24 @@ main {
   background: #182142;
   display: flex;
   justify-content: center;
-  align-items: center;
-  overflow: hidden;
 }
 
 section {
-  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   gap: 2vw;
   position: relative;
   padding: 1vw;
 }
 
-h1 {
-  font-size: 5vw;
-}
-
 h2 {
-  font-size: 2.5vw;
+  font-size: 1.5rem;
   text-align: center;
 }
 
 h3 {
-  font-size: 2vw;
+  font-size: 1vw;
 }
 
 img {
@@ -66,15 +58,14 @@ form {
   padding: 10px;
 }
 
-/* PICKED ROUNDS */
 .picked-rounds p {
   text-align: center;
-  font-size: 2.5vw;
+  font-size: 2rem;
 }
 
 .picked-rounds {
   width: 30vw;
-  height: 10vw;
+  height: 5vw;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 2vw;
@@ -82,17 +73,8 @@ form {
   position: relative;
 }
 
-.picked-rounds p:nth-of-type(1) {
-  position: absolute;
-  bottom: 0;
-}
-
-input {
-  width: 2vw;
-}
-
 label {
-  font-size: 2.5vw;
+  font-size: 2vw;
 }
 
 /* STATS */
@@ -100,14 +82,9 @@ label {
   text-align: center;
   border: 3px solid white;
   padding: 10px;
-  overflow: scroll;
   width: 30vw;
-  height: 20vw;
-  position: relative;
-}
-
-.stats h2 {
-  margin-bottom: 0;
+  height: 15vw;
+  overflow: scroll;
 }
 
 .stats div {
@@ -116,9 +93,8 @@ label {
 }
 
 .stats div h3 {
-  font-size: 2.5vw;
+  font-size: 1.5rem;
   margin-bottom: 1vw;
-  position: sticky;
 }
 
 .stats div h3:nth-of-type(1) {
@@ -130,7 +106,7 @@ label {
 }
 
 .stats img {
-  height: 3vw;
+  height: 2vw;
   display: block;
   margin: auto;
   margin-bottom: 1vw;
@@ -138,7 +114,7 @@ label {
 
 .stats p {
   font-size: 2vw;
-  height: 3vw;
+  height: 2vw;
   margin-bottom: 1vw;
 }
 
@@ -156,7 +132,7 @@ label {
   border: 1px solid black;
   border-radius: 10px;
   padding: 10px;
-  font-size: 4vw;
+  font-size: 3vw;
   color: white;
 }
 
@@ -179,7 +155,7 @@ label {
 
 .user-stat,
 .comp-stat {
-  font-size: 7vw;
+  font-size: 5vw;
 }
 
 .endresult {
@@ -196,25 +172,47 @@ label {
 
 .action button {
   background: #182142;
-  border: 3px solid white;
-  border-radius: 10px;
+  border-radius: 100%;
   width: 10%;
   transition: 0.5s linear;
 }
 
+.action button img {
+  border-radius: 100%;
+  padding: 5px;
+}
+
 .Rock {
-  background: rgb(143, 234, 143);
-  border-radius: 10px;
+  background: white;
+  border: 1rem solid rgb(255, 99, 99);
+}
+
+.Rock-mini {
+  background: white;
+  border-radius: 100%;
+  border: 0.2rem solid rgb(255, 99, 99);
 }
 
 .Paper {
-  background: rgb(255, 118, 118);
-  border-radius: 10px;
+  background: white;
+  border: 1rem solid rgb(74, 205, 71);
+}
+
+.Paper-mini {
+  border-radius: 100%;
+  background: white;
+  border: 0.2rem solid rgb(74, 205, 71);
 }
 
 .Scissors {
-  background: rgb(255, 255, 123);
-  border-radius: 10px;
+  background: white;
+  border: 1rem solid rgb(99, 143, 255);
+}
+
+.Scissors-mini {
+  background: white;
+  border-radius: 100%;
+  border: 0.2rem solid rgb(99, 143, 255);
 }
 
 .action button:active {
@@ -225,18 +223,20 @@ label {
   background: #182142;
   position: absolute;
   bottom: 0;
-  left: 44%;
-  width: 15%;
-  height: 5%;
-  border: 1px solid white;
+  left: 45%;
+  width: 10vw;
+  height: 3vw;
+  border: 3px solid white;
   border-radius: 10px;
   font-size: 2vw;
 }
 
 h3:nth-last-of-type(1) {
-  margin-bottom: 4vw;
+  margin-bottom: 2vw;
+  font-size: 1.5rem;
 }
 
+/* ANIMATION */
 .animation-you {
   position: absolute;
   left: -100%;
@@ -248,12 +248,12 @@ h3:nth-last-of-type(1) {
 
 .animation-you-after {
   left: 0;
-  animation: animationforyou 1.5s linear alternate;
+  animation: animationforyou 2s linear alternate;
 }
 
 .animation-comp {
   position: absolute;
-  right: -100%;
+  right: 200%;
   width: 50vw;
   display: flex;
   justify-content: flex-start;
@@ -262,18 +262,20 @@ h3:nth-last-of-type(1) {
 
 .animation-comp-after {
   right: 0;
-  animation: animationforcomp 1.5s linear alternate;
+  animation: animationforcomp 2s linear alternate;
 }
 
 .animation-you img {
-  width: 70%;
+  margin-top: 30%;
+  width: 40%;
   padding: 30px;
   background: red;
   border-radius: 100%;
 }
 
 .animation-comp img {
-  width: 70%;
+  margin-top: 30%;
+  width: 40%;
   padding: 30px;
   background: blue;
   border-radius: 100%;
@@ -282,19 +284,18 @@ h3:nth-last-of-type(1) {
 .clash {
   display: none;
   position: absolute;
+  top: 0;
 }
 
 .clash h2 {
-  font-size: 10vw;
+  font-size: 15vw;
+  text-shadow: white 0 0 50px;
 }
 
 .clash-after {
   display: block;
-  animation: clash 1s linear;
-}
-
-.animation-vs h2 {
-  font-size: 10vw;
+  display: flex;
+  animation: clash 1.5s linear;
 }
 
 @keyframes animationforyou {
@@ -311,7 +312,6 @@ h3:nth-last-of-type(1) {
     left: 0;
   }
   100% {
-    display: none;
     left: -100%;
   }
 }
@@ -330,7 +330,6 @@ h3:nth-last-of-type(1) {
     right: 0;
   }
   100% {
-    display: none;
     right: -100%;
   }
 }
